--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Click==7.0
+decorator==4.4.0
 dnspython==1.16.0
 eventlet==0.24.1
 Flask==1.0.2
@@ -8,8 +9,18 @@ itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 monotonic==1.5
+networkx==2.3
+nltk==3.4
+numpy==1.16.3
+pandas==0.24.2
 persist-queue==0.4.2
+python-dateutil==2.8.0
 python-engineio==3.5.1
 python-socketio==3.1.2
+pytz==2019.1
+scikit-learn==0.20.3
+scipy==1.2.1
+singledispatch==3.4.0.3
 six==1.12.0
+sklearn==0.0
 Werkzeug==0.15.2
